# dbus-sharing-framework

./: CMakeLists.txt  README.md  task.md
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  ShareService.cpp  ShareService.hpp  server.cpp
share_service_lib/: CMakeLists.txt  Request.cpp  Request.hpp  SharingService.cpp  SharingService.hpp
share_service_lib_example/: CMakeLists.txt  server.cpp
