CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

PROJECT(sharing_service_lib)

SET(SOURCES SharingService.cpp Request.cpp)

SET(CMAKE_AUTOMOC ON)

FIND_PACKAGE(Qt5DBus)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt5::Core Qt5::DBus)

INSTALL(FILES Request.hpp SharingService.hpp DESTINATION include)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)