CMAKE_MINIMUM_REQUIRED(VERSION 2.8...3.22)

PROJECT(share_service_lib_example)

SET(SOURCES server.cpp)

FIND_PACKAGE(Qt5DBus)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ../share_service_lib)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt5::Core Qt5::DBus sharing_service_lib)